BookNav - ensure book can be seen fullscreen even when user scrolls before going to fullscreen Problem: - if user has scrolled down a little before hitting fullscreen, the bookreader gets stuck in a weird place
Solution:
- keep track of scroll position upon entering fullscreen mode
- booknav will scrollTo(0,0) when fullscreen to allow fullscreen CSS to take into effect
- on fullscreen exit, booknav will return user to original scroll position
- Dev note: pegged scrollPosition to `br` instance bc trumping br instance payload when firing custom event on trigger broke all of bookreader

WEBDEV-4352

--- a/src/css/_BRmain.scss
+++ b/src/css/_BRmain.scss
@@ -148,7 +148,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    max-height: 100%;
+    max-height: 100vh;
     background-color: black;
     top: 0;
     left: 0;
